add swaggo to cars route
